--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_NotSignedIn.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_NotSignedIn.cshtml
@@ -11,8 +11,12 @@
                 @Html.ActionLink("Home", "Index", "Home")
             </li>
             <li class="nav-item nav-link">
+                @Html.ActionLink("Quit Centres", "QuitCentres", "Home")
+            </li>
+            <li class="nav-item nav-link">
                 @Html.ActionLink("About Us", "About", "Home")
             </li>
+
             <li class="nav-item nav-link">
                 @Html.ActionLink("Sign In", "SignIn", "Account")
             </li>
