--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/ArticleManage.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/ArticleManage.cshtml
@@ -1,4 +1,5 @@
-﻿@model SmokeFreeApplication.Models.Article
+﻿@model SmokeFreeApplication.Controllers.emailableModel<SmokeFreeApplication.Models.Article>
+
 @{
     ViewBag.Title = "Article Manage";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -9,15 +10,15 @@
 <div class="card" style="width: 70rem;">
 
     <div class="card-header">
-        <img src="@Url.Action("retrieveUserPic", "Admin", new { username = Model.userName })" style="width:5rem; height:5rem; float:left;" alt="Image" />
+        <img src="@Url.Action("retrieveUserPic", "Admin", new { username = Model.model.userName })" style="width:5rem; height:5rem; float:left;" alt="Image" />
         <div style="height:5rem; padding-top:30px; padding-left:100px;">
-            <h6 class="card-subtitle mb-2 text-muted">Posted on : @Html.DisplayFor(modelItem => Model.postDate)</h6>
-            <h6 class="card-subtitle mb-2 text-muted">By : @Html.DisplayFor(modelItem => Model.userName)</h6>
+            <h6 class="card-subtitle mb-2 text-muted">Posted on : @Html.DisplayFor(modelItem => Model.model.postDate)</h6>
+            <h6 class="card-subtitle mb-2 text-muted">By : @Html.DisplayFor(modelItem => Model.model.userName)</h6>
         </div>
     </div>
     <div class="card-body">
-        <h3 class="card-title">@Html.DisplayFor(modelItem => Model.title)</h3>
-        <p class="card-text">@Html.DisplayFor(modelItem => Model.body)</p>
+        <h3 class="card-title">@Html.DisplayFor(modelItem => Model.model.title)</h3>
+        <p class="card-text">@Html.DisplayFor(modelItem => Model.model.body)</p>
     </div>
 
     </a>
@@ -29,25 +30,57 @@
     <div class="collapse navbar-collapse" id="navbarColor03">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active nav-link">
-                @Html.ActionLink("Close", "ClosePost", "Admin", new SmokeFreeApplication.Controllers.ArticleQuery(Model.articleID), null)
+                @Html.ActionLink("Close", "ClosePost", "Admin", new SmokeFreeApplication.Controllers.ArticleQuery(Model.model.articleID), null)
             </li>
-            @if (Model.articleStatus == "pending")
+            @if (Model.model.articleStatus == "pending")
             {
                 <li class="nav-item active nav-link">
-                    @Html.ActionLink("Approve", "ApprovePost", "Admin", new SmokeFreeApplication.Controllers.ArticleQuery(Model.articleID), null)
+                    @Html.ActionLink("Approve", "ApprovePost", "Admin", new SmokeFreeApplication.Controllers.ArticleQuery(Model.model.articleID), null)
                 </li>
                 <li class="nav-item active nav-link">
-                    @Html.ActionLink("Reject", "RejectPost", "Admin", new SmokeFreeApplication.Controllers.ArticleQuery(Model.articleID), null)
+                    @*
+        @Html.ActionLink("Reject", "RejectPost", "Admin", new SmokeFreeApplication.Controllers.ArticleQuery(Model.articleID), null)
+                    *@
+                    <button type="button" class="btn" data-target="#MyModal" data-toggle="modal"> Reject</button>
+                    <div class="modal" id="MyModal" role="dialog">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+
+                                <fieldset>
+                                    <legend>
+                                        Rejection Email
+                                    </legend>
+
+                                    @using (Html.BeginForm("RejectPost", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                                    {
+                                        @Html.HiddenFor(m => Model.model.articleID);
+
+                                        @Html.ValidationSummary()
+                                        <p>From: </p>
+                                        <p>@Html.TextBoxFor(m => Model.emailModel.From)</p>
+                                        <p>To: </p>
+                                        <p>@Html.TextBoxFor(m => Model.emailModel.To)</p>
+                                        <p>Subject: </p>
+                                        <p>@Html.TextBoxFor(m => Model.emailModel.Subject)</p>
+                                        <p>Body: </p>
+                                        <p>@Html.TextAreaFor(m => Model.emailModel.Body)</p>
+                                        <input type="submit" value="Send" />
+                                    }
+
+                                </fieldset>
+                            </div>
+                        </div>
+                    </div>
                 </li>
             }
         </ul>
 
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active justify-content-end">
-                @Html.ActionLink("Previous", "PrevPost", "Admin", new SmokeFreeApplication.Controllers.ArticleQuery(Model.articleID), null)
+                @Html.ActionLink("Previous", "PrevPost", "Admin", new SmokeFreeApplication.Controllers.ArticleQuery(Model.model.articleID), null)
             </li>
             <li class="nav-item active justify-content-end">
-                @Html.ActionLink("Next", "NextPost", "Admin", new SmokeFreeApplication.Controllers.ArticleQuery(Model.articleID), null)
+                @Html.ActionLink("Next", "NextPost", "Admin", new SmokeFreeApplication.Controllers.ArticleQuery(Model.model.articleID), null)
             </li>
        </ul>
     </div>
